maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:6: error: reassignment to val
nombre=random3() ;
      ^RandomMouseMaze:8: error: reassignment to val
if (nombre=0)
          ^RandomMouseMaze:12: error: reassignment to val
if (nombre=1)
          ^RandomMouseMaze:16: error: reassignment to val
if (nombre=2)
          ^